--- a/index.html
+++ b/index.html
@@ -30,19 +30,19 @@
     <div class="dashboard">
       <div class="card">
         <div class="TitleCard"><h3>Total Confirmados</h3></div>
-        <h3 class="conf">Numero</h3>
+        <div class="CardValue"><h3 class="conf">Numero</h3></div>
       </div>
       <div class="card">
         <div class="TitleCard"><h3>Total Mortes</h3></div>
-        <h3 class="mort">Numero</h3>
+        <div class="CardValue"><h3 class="mort">Numero</h3></div>
       </div>
       <div class="card">
         <div class="TitleCard"><h3>Total Recuperados</h3></div>
-        <h3 class="rec">Numero</h3>
+        <div class="CardValue"><h3 class="rec">Numero</h3></div>
       </div>
       <div class="card">
         <div class="TitleCard"><h3>Total Ativos</h3></div>
-        <h3 class="ati">Numero</h3>
+        <div class="CardValue"><h3 class="ati">Numero</h3></div>
       </div>
     </div>
   </body>
