--- a/index.html
+++ b/index.html
@@ -26,23 +26,23 @@
         </div>
       </div>
     </header>
-    <h2 class="countryName">Exemplo</h2>
+    <h2 class="countryName">Global</h2>
     <div class="dashboard">
       <div class="card">
-        <div class="TitleCard"><h3>Total Confirmados</h3></div>
         <div class="CardValue"><h3 class="conf">Numero</h3></div>
+        <div class="TitleCard"><h3>Total Confirmados</h3></div>
       </div>
       <div class="card">
-        <div class="TitleCard"><h3>Total Mortes</h3></div>
         <div class="CardValue"><h3 class="mort">Numero</h3></div>
+        <div class="TitleCard"><h3>Total Mortes</h3></div>
       </div>
       <div class="card">
-        <div class="TitleCard"><h3>Total Recuperados</h3></div>
         <div class="CardValue"><h3 class="rec">Numero</h3></div>
+        <div class="TitleCard"><h3>Total Recuperados</h3></div>
       </div>
       <div class="card">
-        <div class="TitleCard"><h3>Total Ativos</h3></div>
         <div class="CardValue"><h3 class="ati">Numero</h3></div>
+        <div class="TitleCard"><h3>Total Ativos</h3></div>
       </div>
     </div>
   </body>
